<resources>
    <string name="app_name">TMC Indonesia</string>
    <string name="title_activity_home">TMC Indonesia</string>
    <string name="action_settings">Settings</string>
    <string name="daftar">Belum punya akun? <b>Daftar</b></string>
    <string name="setuju_privacypolicy">Saya telah menyetujui <b>Privacy Policy</b>.</string>
    <string name="setuju_infoparent">Saya telah menyetujui <b>Informasi Orang Tua</b>.</string>
    <string name="setuju_guidance">Saya telah menyetujui bahwa anak saya akan menggunakan aplikasi ini dan akan <b>membimbing anak saya ketika menggunakan aplikasi ini.</b></string>
    <string name="questionpage1_question1">1. Seperti apakah Allah itu?</string>
    <string name="questionpage1_answer_1a">a. Allah seperti suatu "kekuatan" baik di dalam alam semesta.</string>
    <string name="questionpage1_answer_1b">b. Allah adalah seorang pribadi yang mengenal dan mencintai kita.</string>
    <string name="questionpage1_question2">2. Kita tak dapat melihat Allah karena</string>
    <string name="questionpage1_answer_2a">a. Allah adalah roh dan kita tidak dapat melihat roh.</string>
    <string name="questionpage1_answer_2b">b. Allah sangat jauh sehinga kita tak dapat melihat-Nya.</string>
    <string name="questionpage1_question3">3. Ketika Alkitab berkata Allah itu kudus, artinya</string>
    <string name="questionpage1_answer_3a">a. Allah itu sangat baik.</string>
    <string name="questionpage1_answer_3b">b. Allah itu suci dan sempurna tanpa dosa sedikitpun.</string>
    <string name="questionpage1_question4">4. Aku tahu Allah mengasihiku karena</string>
    <string name="questionpage1_answer_4a">a. Ia memberikan Putra-Nya untuk mati menebus dosa ku.</string>
    <string name="questionpage1_answer_4b">b. Aku merasa begitu.</string>
    <string name="questionpage1_question5">5. Apa yang Allah ingin kita lakukan?</string>
    <string name="questionpage1_answer_5a">a. Allah ingin kita mencintai-Nya dengan sepenuh hati kita.</string>
    <string name="questionpage1_answer_5b">b. Allah ingin kita melakukan banyak kebaikan untuk-Nya.</string>
    <string name="MJWJ1_question1">1. Hal terpenting apa yang kamu pelajari dari bab ini?</string>
    <string name="MJWJ1_question2">2. Adakah yang tidak kamu mengerti dalam bab ini? </string>
    <string name="MJWJ1_question3">3. Apakah kamu memiliki keinginan khusus atau permintaan doa?</string>
    <string name="MJWJ1_question4">4. Kami mendorongmu untuk mengisi kolom di bawah ini dan memulai sebuah jurnal. Tuliskanlah doa, pujian, dan rasa syukurmu kepada Tuhan!</string>
    <string name="questionpage2_question1">1. Alkitab berkata bahwa Allah adalah</string>
    <string name="questionpage2_answer_1a">a. Satu Allah dalam tiga pribadi, yaitu Bapa, Anak, dan Roh Kudus.</string>
    <string name="questionpage2_answer_1b">b. Tiga pribadi yang berbeda.</string>
    <string name="questionpage2_question2">2. Allah dapat berada di mana pun pada saat yang sama karena</string>
    <string name="questionpage2_answer_2a">a. Ia dapat pergi dengan sangat cepat.</string>
    <string name="questionpage2_answer_2b">b. Ia adalah Tuhan dan Ia adalah Roh.</string>
    <string name="questionpage2_question3">3. Karena Allah itu kudus dan adil, maka</string>
    <string name="questionpage2_answer_3a">a. Ia harus menghukum segala dosa.</string>
    <string name="questionpage2_answer_3b">b. Ia bisa mengabaikan dosa-dosa kita.</string>
    <string name="questionpage2_question4">4. Karena Allah itu setia,</string>
    <string name="questionpage2_answer_4a">a. Ia hampir selalu memenuhi janji-Nya.</string>
    <string name="questionpage2_answer_4b">b. Ia selalu memenuhi janji-Nya.</string>
    <string name="questionpage2_question5">5. Karena Allah itu Mahabijaksana, maka</string>
    <string name="questionpage2_answer_5a">a. Ia hampir tahu segalanya.</string>
    <string name="questionpage2_answer_5b">b. Ia tahu segalanya, bahkan pikiran-pikiran kita.</string>
    <string name="MJWJ2_question1">1. Hal terpenting apa yang kamu pelajari dari bab ini?</string>
    <string name="MJWJ2_question2">2. Adakah yang tidak kamu mengerti dalam bab ini? </string>
    <string name="MJWJ2_question3">3. Apakah kamu memiliki keinginan khusus atau permintaan doa?</string>
    <string name="MJWJ2_question4">4. Kami mendorongmu untuk mengisi kolom di bawah ini dan memulai sebuah jurnal. Tuliskanlah doa, pujian, dan rasa syukurmu kepada Tuhan!</string>
    <string name="questionpage3_question1">1. Bagaimana langit dan bumi terwujud?</string>
    <string name="questionpage3_answer_1a">a. Oleh ledakan besar.</string>
    <string name="questionpage3_answer_1b">b. Tuhan menciptakannya.</string>
    <string name="questionpage3_question2">2. Bagaimana Allah menciptakan langit dan bumi?</string>
    <string name="questionpage3_answer_2a">a. Allah menciptakan dengan bekerja keras.</string>
    <string name="questionpage3_answer_2b">b. Allah menciptakan dengan firman-Nya.</string>
    <string name="questionpage3_question3">3. Fakta yang benar tentang manusia adalah</string>
    <string name="questionpage3_answer_3a">a. Manusia diciptakan oleh Allah, sesuai gambar dan wujud-Nya.</string>
    <string name="questionpage3_answer_3b">b. Manusia berevolusi dari hewan dalam proses waktu yang lama.</string>
    <string name="questionpage3_question4">4. Dari semua hal yang Ia ciptakan, mana yang paling dikasihi Allah?</string>
    <string name="questionpage3_answer_4a">a. Planet-planet dan bintang-bintang yang indah.</string>
    <string name="questionpage3_answer_4b">b. Manusia.</string>
    <string name="questionpage3_question5">5. Hal yang paling ajaib tentang kita adalah</string>
    <string name="questionpage3_answer_5a">a. Kita bisa membuat komputer dan pesawat luar angkasa.</string>
    <string name="questionpage3_answer_5b">b. Allah dapat tinggal di dalam hati kita.</string>
    <string name="MJWJ3_question1">1. Hal terpenting apa yang kamu pelajari dari bab ini?</string>
    <string name="MJWJ3_question2">2. Adakah yang tidak kamu mengerti dalam bab ini? </string>
    <string name="MJWJ3_question3">3. Apakah kamu memiliki keinginan khusus atau permintaan doa?</string>
    <string name="MJWJ3_question4">4. Kami mendorongmu untuk mengisi kolom di bawah ini dan memulai sebuah jurnal. Tuliskanlah doa, pujian, dan rasa syukurmu kepada Tuhan!</string>
    <string name="questionpage4_question1">1. Dari Alkitab kita belajar bahwa</string>
    <string name="questionpage4_answer_1a">a. Setan hanyalah karakter ciptaan yang dipercayai dan tidak benar-benar ada.</string>
    <string name="questionpage4_answer_1b">b. Setan adalah musuh terbesar Allah dan juga musuh kita.</string>
    <string name="questionpage4_question2">2. Dari Alkitab kita belajar bahwa</string>
    <string name="questionpage4_answer_2a">a. Mulanya Setan diciptakan sebagai malaikat, namun kemudian ia memberontak kepada Allah.</string>
    <string name="questionpage4_answer_2b">b. Setan memang telah selalu menjadi musuh Tuhan.</string>
    <string name="questionpage4_question3">3. Menipu orang berarti</string>
    <string name="questionpage4_answer_3a">a. Menceritakan kepada mereka apa yang ingin mereka dengar.</string>
    <string name="questionpage4_answer_3b">b. Membuat mereka memercayai hal yang tidak benar.</string>
    <string name="questionpage4_question4">4. Setan mencobai kita dengan hal-hal yang </string>
    <string name="questionpage4_answer_4a">a. Selalu terlihat buruk.</string>
    <string name="questionpage4_answer_4b">b. Bisa terlihat indah, namun sebenarnya tidak baik.</string>
    <string name="questionpage4_question5">5. Kita dapat terhindar dari tipu daya Setan dengan</string>
    <string name="questionpage4_answer_5a">a. Mengenal dan menaati apa yang Allah firmankan dalam Alkitab.</string>
    <string name="questionpage4_answer_5b">b. Mengetahui nasihat orang-orang dalam berbagai buku.</string>
    <string name="MJWJ4_question1">1. Hal terpenting apa yang kamu pelajari dari bab ini?</string>
    <string name="MJWJ4_question2">2. Adakah yang tidak kamu mengerti dalam bab ini? </string>
    <string name="MJWJ4_question3">3. Apakah kamu memiliki keinginan khusus atau permintaan doa?</string>
    <string name="MJWJ4_question4">4. Kami mendorongmu untuk mengisi kolom di bawah ini dan memulai sebuah jurnal. Tuliskanlah doa, pujian, dan rasa syukurmu kepada Tuhan!</string>
    <string name="questionpage5_question1">1. Juru Selamat yang dijanjikan bernama Yesus karena</string>
    <string name="questionpage5_answer_1a">a. Yesus adalah nama yang indah.</string>
    <string name="questionpage5_answer_1b">b. Yesuslah yang menyelamatkan kita dari dosa-dosa kita.</string>
    <string name="questionpage5_question2">2. Yohanes Pembaptis menyebut Yesus “Anak Domba Allah” karena</string>
    <string name="questionpage5_answer_2a">a. Yesus akan mati untuk menghapus dosa dunia.</string>
    <string name="questionpage5_answer_2b">b. Yesus lembut bagai seekor anak domba.</string>
    <string name="questionpage5_question3">3. Dari Alkitab kita belajar bahwa Yesus datang ke dunia</string>
    <string name="questionpage5_answer_3a">a. Hanya untuk melakukan banyak keajaiban.</string>
    <string name="questionpage5_answer_3b">b. Untuk mati di kayu salib menanggung dosa-dosa kita.</string>
    <string name="questionpage5_question4">4. Salah satu pencuri yang disalibkan bersama Yesus diselamatkan karena</string>
    <string name="questionpage5_answer_4a">a. Ia lebih baik dari pencuri yang satunya.</string>
    <string name="questionpage5_answer_4b">b. Ia percaya bahwa Tuhan Yesus adalah Juru Selamatnya.</string>
    <string name="questionpage5_question5">5. Allah ingin aku percaya bahwa</string>
    <string name="questionpage5_answer_5a">a. Yesus adalah orang hebat.</string>
    <string name="questionpage12_question1">1. Anugerah Allah terbesar bagi kita adalah</string>
    <string name="questionpage12_answer_1a">a. Anak-Nya. Ia telah memberikan Kristus kepada kita, untuk hidup di dalam kita.</string>
    <string name="questionpage12_answer_1b">b. Kebahagiaan. Tuhan membuat kita bahagia dengan memberikan apa yang kita minta.</string>
    <string name="questionpage12_question2">2. Masalah terbesarku adalah</string>
    <string name="questionpage12_answer_2a">a. Apa yang orang lain katakan dan perbuat kepadaku.</string>
    <string name="questionpage12_answer_2b">b. Diriku sendiri! Egoku selalu menjadi masalah paling besar.</string>
    <string name="questionpage12_question3">3. Saat ego bertakhta di dalam hati</string>
    <string name="questionpage12_answer_3a">a. Aku menjadi orang yang egois. Aku tidak berbahagia dan banyak melakukan dosa dalam hidupku.</string>
    <string name="questionpage12_answer_3b">b. Aku akan bahagia karena aku hidup untuk membahagiakan diriku sendiri.</string>
    <string name="questionpage12_question4">4. Saat Kristus bertakhta dalam hatiku, orang lain akan dapat melihat</string>
    <string name="questionpage12_answer_4a">a. Indahnya hidup Kristus di dalam aku.</string>
    <string name="questionpage12_answer_4b">b. Betapa baiknya aku.</string>
    <string name="questionpage12_question5">5. Rahasia dari hidup kristiani adalah</string>
    <string name="questionpage12_answer_5a">a. Berusaha keras untuk menjadi orang baik.</string>
    <string name="questionpage12_answer_5b">b. Berkata “TIDAK” pada ego sendiri dan bergantung kepada Kristus untuk hidup di dalamku.</string>
    <string name="keputusanku">“Tuhanku Yesus, takhta hatiku adalah milik-Mu! Aku memilih untuk hidup seperti Kristus dan bukan menurut egoku sendiri.” </string>
    <string name="MJWJ12_question1">Tuliskan kesaksian, kesan-kesan kamu, atau perubahan apa yang kamu alami setelah belajar Explorer Club seri 1!</string>
    <string name="menu_home">the Mail Box Club</string>
    <string name="menu_gallery">Privacy Policy</string>
    <string name="menu_slideshow">Website</string>
</resources>