<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.tmcindonesia.application.HomeAppUI.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_privacy_policy"
        android:name="org.tmcindonesia.application.HomeAppUI.PrivacyPolicy.PrivacyPolicyFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_policy" />

    <fragment
        android:id="@+id/nav_website"
        android:name="org.tmcindonesia.application.HomeAppUI.Website.WebsiteFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_website" />
</navigation>