<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questions.LESSON12">

    <RelativeLayout
        android:id="@+id/relativeLayout_ScrollContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-65dp"
        app:srcCompat="@drawable/swatch" />

    <!--    ============================================= -->
    <!--    Q U E S T I O N    P A G E    L E S S O N   1 -->
    <!--    ============================================= -->
    <RelativeLayout
        android:id="@+id/relativeLayout_QuestionPage12_MultipleChoiceContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp">
        <!--    question page 1-->
        <RelativeLayout
            android:id="@+id/relativeLayout_QuestionPage12_MultipleChoiceContainer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/MultipleChoiceContainer">
            <ImageView
                android:id="@+id/ayojawab"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:paddingTop="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="-50dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ayojawab"
                />
            <TextView
                android:id="@+id/textView_QuestionPage12_MultipleChoiceQuestion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/questionpage12_question1"
                android:textSize="20sp"
                android:layout_below="@id/ayojawab"/>

            <RadioGroup
                android:id="@+id/radioGroup_QuestionPage12_MultipleChoiceQuestion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_QuestionPage12_MultipleChoiceQuestion1"
                android:layout_centerVertical="true">

                <RadioButton
                    android:id="@+id/radioButton_questionpage12_answer_1a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionpage12_answer_1a" />

                <RadioButton
                    android:id="@+id/radioButton_questionpage12_answer_1b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionpage12_answer_1b" />
            </RadioGroup>
        </RelativeLayout>
        <!--    question page 2-->
        <RelativeLayout
            android:id="@+id/relativeLayout_QuestionPage12_MultipleChoiceContainer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout_QuestionPage12_MultipleChoiceContainer1"
            android:padding="@dimen/MultipleChoiceContainer">

            <TextView
                android:id="@+id/textView_QuestionPage12_MultipleChoiceQuestion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="20dp"
                android:text="@string/questionpage12_question2"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup_QuestionPage12_MultipleChoiceQuestion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_QuestionPage12_MultipleChoiceQuestion2"
                android:layout_centerVertical="true">

                <RadioButton
                    android:id="@+id/radioButton_questionpage12_answer_2a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionpage12_answer_2a" />

                <RadioButton
                    android:id="@+id/radioButton_questionpage12_answer_2b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionpage12_answer_2b" />
            </RadioGroup>
        </RelativeLayout>

        <!--    question page 3-->
        <RelativeLayout
            android:id="@+id/relativeLayout_QuestionPage12_MultipleChoiceContainer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout_QuestionPage12_MultipleChoiceContainer2"
            android:padding="@dimen/MultipleChoiceContainer">

            <TextView
                android:id="@+id/textView_QuestionPage12_MultipleChoiceQuestion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/questionpage12_question3"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup_QuestionPage12_MultipleChoiceQuestion3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_QuestionPage12_MultipleChoiceQuestion3"
                android:layout_centerVertical="true">

                <RadioButton
                    android:id="@+id/radioButton_questionpage12_answer_3a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionpage12_answer_3a" />

                <RadioButton
                    android:id="@+id/radioButton_questionpage12_answer_3b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionpage12_answer_3b" />
            </RadioGroup>
        </RelativeLayout>

        <!--    question page 4-->
        <RelativeLayout
            android:id="@+id/relativeLayout_QuestionPage12_MultipleChoiceContainer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout_QuestionPage12_MultipleChoiceContainer3"
            android:padding="@dimen/MultipleChoiceContainer">

            <TextView
                android:id="@+id/textView_QuestionPage12_MultipleChoiceQuestion4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/questionpage12_question4"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup_QuestionPage12_MultipleChoiceQuestion4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_QuestionPage12_MultipleChoiceQuestion4"
                android:layout_centerVertical="true">

                <RadioButton
                    android:id="@+id/radioButton_questionpage12_answer_4a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionpage12_answer_4a" />

                <RadioButton
                    android:id="@+id/radioButton_questionpage12_answer_4b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionpage12_answer_4b" />
            </RadioGroup>
        </RelativeLayout>

        <!--    question page 5-->
        <RelativeLayout
            android:id="@+id/relativeLayout_QuestionPage12_MultipleChoiceContainer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout_QuestionPage12_MultipleChoiceContainer4"
            android:padding="@dimen/MultipleChoiceContainer">

            <TextView
                android:id="@+id/textView_QuestionPage12_MultipleChoiceQuestion5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/questionpage12_question5"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup_QuestionPage12_MultipleChoiceQuestion5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_QuestionPage12_MultipleChoiceQuestion5"
                android:layout_centerVertical="true">

                <RadioButton
                    android:id="@+id/radioButton_questionpage12_answer_5a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionpage12_answer_5a" />

                <RadioButton
                    android:id="@+id/radioButton_questionpage12_answer_5b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionpage12_answer_5b" />
            </RadioGroup>
        </RelativeLayout>

        <Button
            android:id="@+id/button_CheckAnswer_QuestionsPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout_QuestionPage12_MultipleChoiceContainer5"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="#fbe087"
            android:text="ok"
            android:textColor="#000000" />
    </RelativeLayout>
    <!--    =============================================================== -->
    <!--    M Y    J O U R N E Y    W I T H    J E S U S    L E S S O N   1 -->
    <!--    =============================================================== -->
    <RelativeLayout
        android:id="@+id/relativeLayout_QuestionPage12_MJWJContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout_QuestionPage12_MultipleChoiceContainer"
        android:padding="25dp">

        <ImageView
            android:id="@+id/keputusanku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/keputusanku" />

        <TextView
            android:id="@+id/textView_QuestionPage12_keputusanku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/keputusanku"
            android:gravity="center"
            android:text="@string/keputusanku"
            android:textSize="@dimen/MJWJQuestion" />

        <EditText
            android:id="@+id/editText_tanggalHidupSepertiKristus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="masukan tanggal hari ini"
            android:layout_below="@id/textView_QuestionPage12_keputusanku"
            />


        <TextView
            android:id="@+id/textView_QuestionPage12_MJWJQuestion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MJWJ12_question1"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/MJWJQuestion"
            android:gravity="center"
            android:layout_below="@id/editText_tanggalHidupSepertiKristus"/>

        <EditText
            android:id="@+id/editText_QuestionPage12_kesaksianExplorerSatu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_QuestionPage12_MJWJQuestion1"
            android:textSize="@dimen/MJWJAnswer" />

        <Button
            android:id="@+id/button_CheckAnswer_MJWJ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="#fbe087"
            android:layout_below="@id/editText_QuestionPage12_kesaksianExplorerSatu"
            android:text="ok"
            android:textColor="#000000" />
        </RelativeLayout>
        <ImageView
            android:id="@+id/congratulation"
            android:layout_width="wrap_content"
            android:layout_height="310dp"
            android:src="@drawable/jesusthronecongrats"
            android:layout_below="@id/relativeLayout_QuestionPage12_MJWJContainer"
            android:layout_marginTop="0dp"
            android:scaleType="fitXY"/>

    </RelativeLayout>
</ScrollView>